--- a/index.css
+++ b/index.css
@@ -1,14 +1,15 @@
-:root{ background-color: aqua;}
-.li_task{
-    display: inline-flex;
-    gap: 5px;
+:root {
+  background-color: aqua;
 }
-.btn2{
-    border: none;
-    background-color: aqua;
+.li_task {
+  display: inline-flex;
+  gap: 5px;
+}
+.btn2 {
+  border: none;
+  background-color: aqua;
 }
 button:hover {
-    background-color: rgb(212, 42, 30);
-    border-radius: 3px;
-    
+  background-color: rgb(212, 42, 30);
+  border-radius: 3px;
 }
